# inference-gateway

./: .pre-commit-config.yaml  Makefile  gunicorn_asgi.config.py  pyproject.toml
.github/workflows/: deploy-docs.yml  django_tests.yml
alcf_ai/: README.md  pyproject.toml
alcf_ai/src/alcf_ai/: __init__.py  auth.py  cli.py  client.py  sam3.py  transfer.py
alcf_ai/src/alcf_ai/resources/: __init__.py  cluster.py  resource.py  sam3.py
compute-functions/: genslm_esm_inference_function.py  qstat_register_function.py  vllm_batch_function.py  vllm_register_function_with_streaming.py
cron_jobs/: check_application_health.py  check_maintenances.py  direct_health_monitor.py  get_endpoint_status.py
dashboard_async/: asgi.py  globus_auth.py  settings.py  urls.py  views.py  wsgi.py
dashboard_async/templates/: realtime.html
deploy/: dashboard_async.service  dashboard_wsgi.config.py  gateway_asgi.config.py  gateway_async.service  nginx_app.conf  pg-docker.sh
docs/admin-guide/gateway-setup/: configuration.md
examples/load-testing/: benchmark_analysis.py  plot_monthly_usage.py  run_rate_comparison.py
fixtures/: clusters.json  endpoints.json  new_endpoints.json
inference_gateway/: apps.py  settings.py  urls.py  utils.py
resource_server/: models.py
resource_server_async/: api.py  apps.py  models.py  urls.py  utils.py  views.py
resource_server_async/clusters/: cluster.py  globus_compute.py  metis.py
resource_server_async/endpoints/: direct_api.py  endpoint.py  globus_compute.py  metis.py
resource_server_async/management/commands/: clear_cache.py  migrate_legacy_logs.py  query_model_status.py  update_batch_status.py
resource_server_async/schemas/: sam3.py
resource_server_async/tests/: __init__.py  mixins.py  mock_utils.py  test_batch_inference_view.py  test_endpoint_view.py  test_inference_view.py  test_stream_inference_view.py
utils/: auth_utils.py  globus_utils.py  metis_utils.py  openai_models.py  serializers.py
utils/pydantic_models/: batch.py  db_models.py  openai_chat_completions.py  openai_completions.py  openai_embeddings.py
utils/tests/: test_pydantic_models.py
