[project]
name = "inference-gateway-backend"
version = "0.2.0"
description = ""
authors = [{ name = "Benoit Cote", email = "bcote@anl.gov" }]
requires-python = "==3.12.6"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

# Directly imported dependencies for production:
dependencies = [
    "asgiref>=3.10",
    "cachetools<6",
    "django-cors-headers",
    "django-filter",
    "django-ninja",
    "django-redis",
    "django",
    "djangorestframework>=3.16.1,<4",
    "drf-spectacular",
    "globus-compute-sdk>=3.16.1,<4",
    "globus-sdk>=3.65.0,<4",
    "gunicorn",
    "h11",
    "httpx",
    "psycopg-pool>=3.2.7,<4",
    "psycopg>=3.2.12,<4",
    "pydantic>=2.12",
    "pydantic-settings",
    "python-dotenv<2",
    "redis<7",
    "requests<3",
    "uvicorn[standard]>=0.30.6",
]

[dependency-groups]

# Dependencies for development/testing:
dev = [
    "pyright[nodejs]",
    "ruff",
    "alcf-ai",
    "pre-commit>=4.5.1",
]

# Documentation dependencies:
docs = [
    "mkdocs-get-deps",
    "mkdocs-material-extensions",
    "mkdocs-material>=9.7.0,<10",
    "mkdocs-minify-plugin<0.9",
    "mkdocs>=1.5.0",
    "pymdown-extensions>=10.0",
]

[tool.uv.sources]
alcf-ai = { workspace = true }

[tool.uv.workspace]
members = ["alcf_ai/"]

[tool.uv.build-backend]
module-name = [
    "resource_server",
    "resource_server_async",
    "dashboard_async",
    "utils",
    "alcf_ai",
]
module-root = ""
namespace = true

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 88
target-version = "py312"
extend-exclude = [
    "resource_server/migrations/*",
    "resource_server_async/migrations/*"
]

[tool.ruff.lint]
select = ["F", "I"]

[tool.ruff.lint.isort]
known-first-party = ["alcf_ai", "resource_server_async", "dashboard_async", "resource_server", "utils"]



[tool.pyright]
# https://microsoft.github.io/pyright/#/configuration
include = ["alcf_ai", "compute-functions", "cron_jobs", "dashboard_async", "*.py", "inference_gateway", "resource_server", "resource_server_async", "utils"]
exclude = [
    "**/.*",
    "**/__pycache__",
    "**/.venv",
    "**/node_modules",
    "build",
    "dist",
    "utils/tests/test*.py"
]

pythonVersion = "3.12"

typeCheckingMode = "strict"

reportMissingImports = "error"
reportMissingTypeStubs = "warning"

reportUnusedImport = "error"
reportUnusedVariable = "error"
reportPrivateUsage = "warning"
reportImplicitOverride = "error"
