[project]
name = "alcf-ai"
version = "0.4.0"
description = "ALCF Inference Gateway SDK"
authors = [{ name = "Misha Salim", email = "msalim@anl.gov" }]
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "httpx",
    "numpy",
    "rich",
    "typer",
    "globus-sdk>=3.65.0,<4",
    "openai",
    "matplotlib",
    "Pillow",
    "tifffile",
    "smart-open",
]

[project.scripts]
alcf-ai = "alcf_ai:cli"

[build-system]
requires = ["uv_build<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 88
target-version = "py312"
